fix: dark mode by default user settings

--- a/src/app/wedding-background/wedding-background.component.scss
+++ b/src/app/wedding-background/wedding-background.component.scss
@@ -87,6 +87,7 @@
   position: absolute;
   inset: 0;
   background: linear-gradient(to bottom, #ecfdf5, white);
+  background-repeat: no-repeat;
   opacity: 0.7;
 }
 
